--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&useJDBCCo
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
