--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,13 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.1.RELEASE</version>
+	
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>pl.javastart</groupId>
 	<artifactId>spring-mvc-rest-data</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+		<packaging>war</packaging>
 	<name>spring-mvc-rest-data</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -24,7 +26,27 @@
     <artifactId>spring-security-test</artifactId>
     <version>5.1.3.RELEASE</version>
 </dependency>
+		<!-- https://mvnrepository.com/artifact/jstl/jstl -->
+<dependency>
+    <groupId>jstl</groupId>
+    <artifactId>jstl</artifactId>
+    <version>1.2</version>
+</dependency>
 		
+		
+		<dependency>
+	<groupId>org.apache.tomcat.embed</groupId>
+	<artifactId>tomcat-embed-jasper</artifactId>
+	<scope>provided</scope>
+</dependency>
+		
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+		</dependency>
+
+
+
        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
