--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=UTF-8&useUnicode=yes
 spring.datasource.username=root
 spring.datasource.password=admin
-
-spring.mvc.view.prefix=/WEB-INF/
-spring.mvc.view.suffix=.jsp
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
