--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
     <version>5.1.3.RELEASE</version>
 </dependency>
 		
+		 <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        
        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
